--- a/my-new-app/package.json
+++ b/my-new-app/package.json
@@ -10,6 +10,8 @@
     "chart.js": "^4.4.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
